# cc5512-aux

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  data.json
aux1/: CMakeLists.txt  cmake_install.cmake
aux1/libs/bgfx.cmake/: .gitignore  CMakeLists.txt
aux1/libs/bgfx.cmake/.github/workflows/: release.yml
aux1/libs/bgfx.cmake/cmake/: bgfx.cmake  bx.cmake  examples.cmake  tools.cmake
aux1/libs/bgfx.cmake/cmake/tools/: shaderc.cmake
aux1/src/: hello_bgfx.cpp
aux1/src/shaders/: v_simple.sc  varying.def.sc
aux2/: CMakeLists.txt  README.md  containers.cpp  containers.hpp  test.cpp
aux3/: CMakeLists.txt  game_object.cpp  hello_json.cpp  json_set.cpp  serialization.cpp
aux4/: CMakeLists.txt  engine.cpp  engine.hpp  scene_graph.cpp  vert.glsl
aux5/: CMakeLists.txt  ejemplo.cpp  engine.cpp  engine.hpp  frag.glsl  hello_openal.cpp  spatial_audio.cpp
aux6/: CMakeLists.txt  behavior_tree.cpp  cube.hpp  engine.cpp  engine.hpp
libs/: CMakeLists.txt
